@@ -27,6 +27,7 @@ KAWALIB=${KAWALIB-"`@CYGPATH_W@ $kawadir/lib/kawa-@VERSION@.jar`"}
 # MSYS: KAWALIB=${KAWALIB-"`cd $kawadir/lib/; pwd -W`@CLASSPATH_SEPARATOR@kawa-@VERSION@.jar`"}
 CLASSPATH="${KAWALIB}@CLASSPATH_SEPARATOR@@run_classpath@${CLASSPATH}"
 @WITH_JLINE2_TRUE@CLASSPATH="${CLASSPATH}@CLASSPATH_SEPARATOR@$kawadir/lib/jline.jar"
+@WITH_DOMTERM_TRUE@CLASSPATH="${CLASSPATH}@CLASSPATH_SEPARATOR@$kawadir/lib/domterm.jar"
 export CLASSPATH
 
 # This ugly duplication is so we only have to use arrays and substrings
